Updated DirectBuffer